KQED -/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Time_Date__c</fullName>
        <inlineHelpText>End date and time of the campaign</inlineHelpText>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time_Date_old__c</fullName>
        <label>End Time &amp; Date_old</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Image_URL__c</fullName>
        <label>Event Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Logo__c</fullName>
        <inlineHelpText>Insert the image or the event url by clicking into the image</inlineHelpText>
        <label>Event Image</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Owner__c</fullName>
        <inlineHelpText>Person who entered the Event or the direct WGBH contact for the event</inlineHelpText>
        <label>Event Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Owner_old__c</fullName>
        <inlineHelpText>Person who entered the Event or the direct WGBH contact for the event</inlineHelpText>
        <label>Event Owner_old</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns_old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Url__c</fullName>
        <label>Event Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_segment_Level1__c</fullName>
        <label>Financial Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <controllingField>Campaign_Group__c</controllingField>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Join</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed/Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Giving_Segment__c</fullName>
        <description>These are the segments that define the giving level from a donor</description>
        <label>Giving Segment</label>
        <picklist>
            <controllingField>Financial_segment_Level1__c</controllingField>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hundred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Contributions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guests_Confirmed__c</fullName>
        <label>Guests - Confirmed</label>
        <summaryFilterItems>
            <field>CampaignMember.Role__c</field>
            <operation>equals</operation>
            <value>Guest</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Guests__c</fullName>
        <label>Guests</label>
        <summaryFilterItems>
            <field>CampaignMember.Role__c</field>
            <operation>equals</operation>
            <value>Guest</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HTML_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>House_File_Name__c</fullName>
        <description>This is the name of the house file which is contained within this campaign.</description>
        <inlineHelpText>When the check box for the House File is checked please fill out the house file name that is associated to this campaign.</inlineHelpText>
        <label>House File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>House_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to identify if this campaign contains a house file</description>
        <inlineHelpText>When the box is checked on the house file please fill out the name of the file that is contained within this campaign for tracking purposes.</inlineHelpText>
        <label>House File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Calls__c</fullName>
        <label>Inbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category__c</fullName>
        <description>Field related to the industry, this is a sub category of the Industries for campaign/Projects.</description>
        <inlineHelpText>Choose a sub industry after you chose the main Industry if applicable.</inlineHelpText>
        <label>Industry Sub Category</label>
        <picklist>
            <controllingField>Industry__c</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques/Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar/Recreational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café/Eaterie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carribean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children/Maternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Unions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary/Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink/Water/Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics/Computers/Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <inlineHelpText>High Level Industry - it will also in most cases have an industry sub category</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction &amp; Bldg Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spa, Beauty &amp; Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theatre/Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine/Spirits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiative_Date__c</fullName>
        <inlineHelpText>Date that the project will come.</inlineHelpText>
        <label>Initiative Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <description>GBHAQMM110115</description>
        <inlineHelpText>Job # allows for invoices from a vendor, the job number should be the same for the entire run and should have the following format; STATION, GIVING SEGMENT, CHANNEL, YYMMDD of campaign creation.</inlineHelpText>
        <label>Job #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KCRW_Email_Date__c</fullName>
        <inlineHelpText>When does the KCRW email hit?</inlineHelpText>
        <label>KCRW Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KCRW_Staff__c</fullName>
        <label>KCRW Staff</label>
        <summaryFilterItems>
            <field>CampaignMember.Role__c</field>
            <operation>equals</operation>
            <value>KCRW Staff</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>List_File_Code__c</fullName>
        <label>List File Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_File_Name__c</fullName>
        <description>If the check box is checked the list file name should be populated</description>
        <inlineHelpText>If this campaign contains list file names please enter the name of the file for tracking purposes.</inlineHelpText>
        <label>List File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check box as a place holder for this field we can edit the type if you wish to track the name of the list file, there is also a new field for the list file tracking name/number.</description>
        <inlineHelpText>This checkbox indicates whether this name is from a list file, the List File Name is where you enter the name of the rental file.</inlineHelpText>
        <label>List File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Serial__c</fullName>
        <externalId>true</externalId>
        <label>List Serial #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Size__c</fullName>
        <inlineHelpText>Imported value</inlineHelpText>
        <label>List Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Type__c</fullName>
        <inlineHelpText>List Type</inlineHelpText>
        <label>List Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Latitude__c</fullName>
        <label>Location Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Longitude__c</fullName>
        <label>Location Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Url__c</fullName>
        <label>Logo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Discount_Logo__c</fullName>
        <label>Member Benefit Discount Logo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Logo__c</fullName>
        <label>Member Benefit Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Model_score__c</fullName>
        <label>Model score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modification_Date__c</fullName>
        <inlineHelpText>List Type</inlineHelpText>
        <label>Modification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modifier_Name__c</fullName>
        <inlineHelpText>Imported value</inlineHelpText>
        <label>Modifier Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>National Change of Address</description>
        <inlineHelpText>If this box is check it confirms that the members within this campaign having been run up against the National Change of Address file.</inlineHelpText>
        <label>NCOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_old__c</fullName>
        <label>Name_old</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Goal__c</fullName>
        <label>Net Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Notes for the users regarding the event, not for publication on the WGBH Event site</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Message__c</fullName>
        <inlineHelpText>Rich text with characters to describe the offer sent to the donor</inlineHelpText>
        <label>Offer Message</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Message_old__c</fullName>
        <inlineHelpText>Rich text with characters to describe the offer sent to the donor</inlineHelpText>
        <label>Offer Message_old</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>On_air_Promo_Date__c</fullName>
        <inlineHelpText>When does on-air promotion begin?</inlineHelpText>
        <label>On-air Promo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Gift__c</fullName>
        <label>Override Gift</label>
        <picklist>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Gift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <label>Package Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parents_Program_Count_Total__c</fullName>
        <label>Parents Program Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>People_Filter_Choice__c</fullName>
        <inlineHelpText>Imported value</inlineHelpText>
        <label>People Filter Choice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People_Filter_Entry__c</fullName>
        <inlineHelpText>Imported value</inlineHelpText>
        <label>People Filter Entry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postage_costs__c</fullName>
        <label>Postage costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Press_Release_Date__c</fullName>
        <inlineHelpText>When does the Press Release hit?</inlineHelpText>
        <label>Press Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prime_Time_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box to indicate if the on air campaign/program break will air during prime time, this field is related to the individual breaks not the overall sub programs.</inlineHelpText>
        <label>Prime Time Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Program__c</fullName>
        <inlineHelpText>Product/Program is the larger program of the campaign.  Membership;Survey;Stewardship;Capital;Auction;Cultivation</inlineHelpText>
        <label>Product/Program</label>
        <picklist>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Program_old__c</fullName>
        <inlineHelpText>Product/Program is the larger program of the campaign.  Membership;Survey;Stewardship;Capital;Auction;Cultivation</inlineHelpText>
        <label>Product/Program_old</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgramBreak_EndDateTime__c</fullName>
        <label>ProgramBreak_EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProgramBreak_StartDateTime__c</fullName>
        <label>ProgramBreak_StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Break_Name__c</fullName>
        <label>Program Break Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Count__c</fullName>
        <label>Program Count</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_by_Segment__c</fullName>
        <inlineHelpText>Count per segment receiving the marketing</inlineHelpText>
        <label>Quantity by Segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI Marketing R.O.I./Net</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Mechanism__c</fullName>
        <description>How we expect the response to come in.</description>
        <inlineHelpText>How we expect the response to come in.</inlineHelpText>
        <label>Response Mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Call Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesale Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Mechanism_old__c</fullName>
        <description>How we expect the response to come in.</description>
        <inlineHelpText>How we expect the response to come in.</inlineHelpText>
        <label>Response Mechanism_old</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Rate__c</fullName>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Goal__c</fullName>
        <label>Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>